--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.16.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-fontawesome": "^1.6.1",
     "react-player": "^0.15.0",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.1.1"
